<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="txt_back">Back</string>


    <string name="defaultloading">Please wait…</string>
    <string name="data">data</string>
    <string name="audio">Audio</string>
    <string name="bdk">0123456789ABCDEFFEDCBA9876543210</string>
    <string name="app_name">Raven</string>
    <string name="serial_port">Serial port</string>
    <string name="normal_bluetooth">Normal Blutooth</string>
    <string name="other_blu">BLE Blutooth</string>
    <string name="title_audio">Audio</string>
    <string name="title_welcome">SZFP Pos</string>
    <string name="print">Print</string>
    <string name="msg_allowed_location_permission">Location permission is on</string>
    <string name="msg_not_allowed_loaction_permission">Location permission is forbidden, related map functions are not available</string>
    <string name="mposmacaddress">MPOSMACADDRESS</string>
    <string name="loadedDevice">LOADED_SERVICE</string>

    <string name="updateEMV">update EMV</string>
    <!--POS CARD UPDATES MESSAGES -->
    <string name="insert_card">Please Insert your card</string>
    <string name="retry_card">Oops!! , Kindly retry the transaction.</string>
    <string name="wait_card">Please wait…</string>
    <string name="input_pin_card">Please Input Pin</string>
    <string name="title_activity_pos">PosActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="btnContinue">Continue</string>
    <string name="waiting_for_card">Please insert your card now.</string>
    <string name="try_another_interface">Please try another interface</string>
    <string name="no_card_detected">No card detected. Please insert or swipe card again and press check card.</string>
    <string name="icc_card_inserted">ICC Card Inserted</string>
    <string name="card_inserted">Card Inserted (Not ICC)</string>
    <string name="bad_swipe">Bad Swipe. Please swipe again and press check card.</string>
    <string name="card_swiped">Card Swiped: </string>
    <string name="format_id">Format ID: </string>
    <string name="masked_pan">Masked PAN: </string>
    <string name="expiry_date">Expiry Date: </string>
    <string name="cardholder_name">Cardholder Name: </string>
    <string name="ksn">KSN: </string>
    <string name="pin_ksn">PIN KSN:</string>
    <string name="track_ksn">Track KSN:</string>
    <string name="emv_ksn">EMV KSN:</string>
    <string name="uid">UID:</string>
    <string name="service_code">Service Code: </string>
    <string name="trackksn">trackksn:</string>
    <string name="pinBlock">pinBlock:</string>
    <string name="posId">posId:</string>
    <string name="get_pos_id">Get PosID</string>
    <string name="operate_mafire">Operate Mafire Cards</string>
    <string name="inject_key_remote">Remote key Loading API</string>
    <string name="getting_pos_id">Getting POS ID…</string>
    <string name="isCardExist">check card in slot</string>
    <string name="card_is_exist">card is exist</string>
    <string name="pinKsn">pinKsn:</string>
    <string name="track_1_length">Track 1 Length: </string>
    <string name="track_2_length">Track 2 Length: </string>
    <string name="track_3_length">Track 3 Length: </string>
    <string name="encrypted_tracks">Encrypted Tracks: </string>
    <string name="encrypted_track_1">Encrypted Track 1: </string>
    <string name="encrypted_track_2">Encrypted Track 2: </string>
    <string name="encrypted_track_3">Encrypted Track 3: </string>
    <string name="partial_track">Partial Track: </string>
    <string name="tap_card">Tap Card: </string>
    <string name="hours">hours</string>
    <string name="minute">minutes</string>
    <string name="seconds">seconds</string>
    <string name="pedi_command">&#091;AOPEDI&#059;VS2&#059;RF0&#059;TD1&#059;CC%s&#059;RG%s&#059;CE%s&#059;&#093;</string>
    <string name="pedk_command">&#091;AOPEDK&#059;KN&#059;RD&#059;CE%s&#059;&#093;</string>
    <string name="pedv_command">&#091;AOPEDV&#059;KV&#059;RD&#059;CE%s&#059;&#093;</string>
    <string name="transaction_declined">Declined</string>
    <string name="card_no_response">Check card no response</string>
    <string name="batch_data">Batch Data:\n</string>
    <string name="transaction_log">Transaction Log:\n</string>
    <string name="card_not_supported">Card not support</string>
    <string name="missing_mandatory_data">Missing mandatory data</string>
    <string name="card_blocked_or_no_evm_apps">Card blocked or no EMV apps</string>
    <string name="invalid_icc_data">Invalid ICC data</string>
    <string name="transaction_device_error">Pos Error</string>
    <string name="transaction_capk_fail">Fail (CAPK fail)</string>
    <string name="transaction_app_fail">Fail (App fail)</string>
    <string name="transaction_cancel">Cancel</string>
    <string name="transaction_not_icc">Fail (Not ICC card)</string>
    <string name="transaction_terminated">Terminated</string>
    <string name="transaction_approved">Approved</string>
    <string name="cashback_amount">Cashback</string>
    <string name="set_amount">Set Amount</string>
    <string name="unable_to_proceed">Unable to proceed with this transaction</string>
    <string name="card_mismatch">Card does not match\nPlease re-try with the original transaction card</string>

    <string name="card_data">Card Data: </string>
    <string name="do_emv_trade_fail">Start EMV failed</string>
    <string name="do_emv_trade_success">Start EMV success</string>
    <string name="app_version">App Version: </string>
    <string name="firmware_version">Firmware Version: </string>
    <string name="usb">USB: </string>
    <string name="charge">Charge: </string>
    <string name="bootloader_version">Bootloader Version: </string>
    <string name="battery_level">Battery ADC: </string>
    <string name="hardware_version">Hardware Version: </string>
    <string name="supported_track">Supported Track: </string>
    <string name="track_1_supported">Track 1 Supported: </string>
    <string name="track_2_supported">Track 2 Supported: </string>
    <string name="track_3_supported">Track 3 Supported: </string>
    <string name="battery_percentage">battery percentage: </string>
    <string name="request_terminal_time">Request Terminal Time. Replied </string>
    <string name="wait">Please wait…</string>
    <string name="remove_card">Please remove card</string>
    <string name="processing">Processing…</string>
    <string name="replied_connected">Replied connected.</string>
    <string name="replied_success">Replied success.</string>
    <string name="replied_failed">Replied failed.</string>
    <string name="no_device_detected">No pos detected.</string>
    <string name="device_plugged">Pos connected.</string>
    <string name="device_unplugged">Pos disconnected.</string>
    <string name="command_not_available">Command not available</string>
    <string name="device_no_response">Pos no response</string>
    <string name="device_reset">Pos reset</string>
    <string name="unknown_error">Unknown error</string>
    <string name="device_busy">Pos Busy</string>
    <string name="out_of_range">Input out of range.</string>
    <string name="invalid_format">Input invalid format.</string>
    <string name="zero_values">Input are zero values.</string>
    <string name="cashback_not_supported">Cashback not supported.</string>
    <string name="crc_error">CRC Error.</string>
    <string name="comm_error">Communication Error.</string>
    <string name="input_invalid">Input invalid.</string>
    <string name="mac_error">MAC ERROR</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="finish_card">finish mafire card</string>
    <string name="msg_disconnect">Click here to disConnected device</string>
    <string name="msg_conn_usb">Click here to find and connect usb</string>
    <string name="device_info">Device Info</string>
    <string name="msg_do_trade">Click here to start do trade after finish connected</string>
    <string name="test_command">Communication Test Command</string>
    <string name="msg_select_device">Click here to scan and connect device</string>
    <string name="title_uart">Uart</string>
    <string name="title_blu">Bluetooth</string>
    <string name="title_ble">Ble Bluetooth</string>
    <string name="starting">Starting…</string>
    <string name="scan_bt_pos_error">no paired bluetooth device\nplease pair bluetooth device first</string>
    <string name="connecting_bt_pos">Please wait…</string>
    <string name="transaction_result">Transaction Result</string>
    <string name="please_select_app">Please select app</string>
    <string name="amount">Amount</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="pin">PIN</string>
    <string name="bypass">Bypass</string>
    <string name="enter_pin">Please enter PIN</string>
    <string name="request_data_to_server">Request data to server.</string>
    <string name="confirm_amount">Confirm amount</string>
    <string name="reversal_data">Reversal Data:\n</string>
    <string name="app_select_timeout_error">APP select time out</string>
    <string name="cmd_timeout">CMD TIMEOUT</string>
    <string name="used">used:</string>
    <string name="scan_over">end the scan</string>
    <string name="scan_bt_device">scan device</string>
    <string name="scan_usb_device">usb device</string>
    <string name="disconnect">disconnect</string>
    <string name="text_quick_emv">update quick emv config</string>
    <string name="check_card">Start Trade</string>
    <string name="please_select_bt_name">select device</string>
    <string name="init_keys">Exchange Certificates</string>
    <string name="verify_keys">Initial Key Loading</string>
    <string name="key_loading">Confirm Key Type</string>
    <string name="poll_card">poll card</string>
    <string name="verify_card">verify card</string>
    <string name="read_card">read card</string>
    <string name="write_card">write card</string>
    <string name="transfer_card">Transceive APDU</string>
    <string name="operate_card">operate card</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="four_digit">Enter your four(4) digit transaction PIN</string>
    <string name="purchase_transaction">Purchase Transaction</string>
    <string name="connect">Connecting to bluetooth</string>
    <string name="title_activity_raven">RavenActivity</string>
    <string name="see_how_to_connect">See how to connect</string>
    <string name="connect_bluetooth">Connect Bluetooth</string>
    <string name="searching_for_device">Searching for device...</string>
    <string name="available_connections">Available Connections</string>
    <string name="connect_to_device">Connect to device</string>
    <string name="powered_by_raven">Powered by <font color='#003c3b'>Raven</font></string>
    <string name="give_the_user_your_device">Give the user your device to enter their Card PIN or guide them to use the <font color='#D28F40'>Scan PIN</font> method.</string>
    <string name="proceed">Proceed</string>
    <string name="card_pin">Card PIN</string>
    <string name="close">Close</string>
    <string name="kindly_select_a_bluetooth_model">Kindly select a bluetooth model!!</string>

</resources>